k8s/monitor/traefik-auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: middleware-auth-alerts
  namespace: monitor
spec:
  basicAuth:
    secret: traefik-auth-secret-alerts
