k8s/monitor/traefik-prom-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: middleware-auth-prom
  namespace: monitor
spec:
  basicAuth:
    secret: traefik-auth-secret-prom
